<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradientjson">

    <!--AICI SE AFISEAZA DATELE PRELUATE DIN JSON-->
    <ImageView
        android:id="@+id/iv_row_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/continente_lv"
        android:src="@drawable/continent0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        />

    <TextView
        android:id="@+id/tv_row_nume_continent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"

        android:fontFamily="@font/genghis"
        android:text="@string/denumire_continent"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_row_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_row_suprafata_continent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_row_bara_vert"

        android:fontFamily="@font/genghis"
        android:text="@string/suprafata_continent"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_row_nume_continent" />

    <TextView
        android:id="@+id/tv_row_densitate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toStartOf="@+id/iv_row_bara_vert"
        android:fontFamily="@font/genghis"
        android:text="@string/densitate"
        android:textColor="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_row_suprafata_continent" />

    <ImageView
        android:id="@+id/iv_row_bara_vert"
        android:layout_width="85dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/linie_verticala"
        android:src="@drawable/vertical_line"
        app:layout_constraintStart_toEndOf="@id/tv_row_nume_continent"
        app:layout_constraintEnd_toStartOf="@+id/tv_row_nume_tara"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_row_nume_tara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"

        android:fontFamily="@font/genghis"
        android:text="@string/denumire_tara"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_row_bara_vert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_row_suprafata_tara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"

        android:fontFamily="@font/genghis"
        android:text="@string/suprafata_tara"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toEndOf="@id/iv_row_bara_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_row_nume_tara" />

    <TextView
        android:id="@+id/tv_row_populatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"

        android:fontFamily="@font/genghis"
        android:text="@string/populatie"
        android:textColor="@color/white"
app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_row_bara_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_row_suprafata_tara" />


    <TextView
        android:id="@+id/tv_row_denumire_oras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:fontFamily="@font/genghis"
        android:text="@string/denumire_oras"
        android:textColor="@color/white"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_row_bara_vert" />

    <TextView
        android:id="@+id/tv_row_risc_epidemiologic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"

        android:fontFamily="@font/genghis"
        android:text="@string/risc_epidemiologic"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_row_denumire_oras" />

    <TextView
        android:id="@+id/tv_row_cod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
android:gravity="center"
        android:fontFamily="@font/genghis"
        android:text="@string/cod"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_row_risc_epidemiologic" />

    <!--
    <ImageView
        android:id="@+id/iv_row_bara_oriz"
        android:layout_width="92dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="510dp"
        android:contentDescription="@string/linie_orizontala"
        android:src="@drawable/horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>